@@ -1,5 +1,5 @@
 ;; Automatically generated file (don't edit) */
-;; Mon Sep  7 16:02:37 CEST 2009
+;; Tue Sep  8 09:18:26 CEST 2009
 
 (provide 'bmacs-config)
 (defvar bmacs-docdir "/users/serrano/prgm/project/bigloo/manuals")
